Enhance formatting in ch07.md with line breaks
Added line breaks to improve formatting and readability.

Signed-off-by: Yen-ting Lee <ytlee.tw@gmail.com>

--- a/ch07.md
+++ b/ch07.md
@@ -5,10 +5,10 @@
 
 # 檔案系統
 
-檔案系統的使用
-os模組提供取得工作目錄、建立目錄、刪除目錄、刪除檔案、執行作業系統命令等功能。
+檔案系統的使用</br>
+os模組提供取得工作目錄、建立目錄、刪除目錄、刪除檔案、執行作業系統命令等功能。</br>
 
-請先到下方連結下載相關檔案範例並上傳到虛擬機中。
+請先到下方連結下載相關檔案範例並上傳到虛擬機中。</br>
 https://drive.google.com/drive/folders/1fIqFo3EevTUfQa1NEqUTydpjXW_RuLQg?usp=sharing
 
 ## 範例練習
@@ -126,8 +126,8 @@ for file in files:
 ```
 
 ## 檔案的讀寫
-open函式八個參數，最常用的是檔案名稱、模式、編碼參數。
-檔案名稱不可省略，其他皆可。
+open函式八個參數，最常用的是檔案名稱、模式、編碼參數。</br>
+檔案名稱不可省略，其他皆可。</br>
 
 ```
 #練習 filewrite1.py
@@ -157,8 +157,8 @@ with open('file1.txt','r') as f:
 
 ```
 
-中文編碼問題：在中文windows系統，一般中文編碼記事本預設為ANSI，
-國際間編碼預設為UTF-8編碼，因此建議使用UTF-8進行存檔
+中文編碼問題：在中文windows系統，一般中文編碼記事本預設為ANSI，</br>
+國際間編碼預設為UTF-8編碼，因此建議使用UTF-8進行存檔</br>
 ```
 #練習 filereadUTF-8.py
 f=open('file2.txt','r',encoding ='cp950')
