--- a/ch07.md
+++ b/ch07.md
@@ -198,3 +198,112 @@ with open('file1.txt','r') as f:
 請到CNN找一篇英文文章存入名為input.txt的檔案，
 並寫一支程式計算小寫a-z各字母分別出現多少個。
 
+## 使用colab掛接google drive
+
+新增程式碼並執行
+```
+from google.colab import drive
+drive.mount('/content/drive')
+```
+
+刪除檔案 
+```
+#練習 刪除檔案 
+#檔案上按右鍵取得路徑
+import os
+file = "/content/drive/..../myFile.txt"
+if os.path.exists(file):
+	os.remove(file)
+else:
+	print(file + "檔案未建立!")
+
+```
+
+建立指定目錄
+```
+#練習 建立指定目錄 osrmdir.py
+import os
+dir = ".../myDir"
+if not os.path.exists(dir):
+	os.mkdir(dir)
+else:
+	print(dir + "已經存在!")   
+
+```
+
+刪除指定檔案
+```
+#練習  刪除指定檔案 osrmdir.py
+import os
+dir = ".../myDir"
+if os.path.exists(dir):
+	os.rmdir(dir)
+else:
+	print(dir + "目錄未建立!")  
+
+```
+
+檔案的讀寫
+```
+#練習 檔案的讀寫 filewrite1.py
+content='''Hello Python
+中文字測試
+Welcome
+'''
+f=open('.../file1.txt','w')
+f.write(content)
+f.close()
+
+```
+
+逐行讀
+```
+#練習 逐行讀 fileread1.py
+f=open('.../file1.txt','r')
+for line in f:
+	print(line,end="")
+f.close()
+
+```
+
+逐行讀
+```
+#練習 逐行讀 fileread2.py
+with open('.../file1.txt','r') as f:
+	for line in f:
+    	print(line,end="")
+
+```
+
+字數統計
+```
+#練習 字數統計
+list = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']
+with open('input.txt','r') as f:
+	str1 = f.read()
+	for i in range(26):
+    	print(list[i],'has',str1.count(list[i]))
+
+```
+
+## 作業
+有五個字串如下：</br>
+str1 = 'Python'</br>
+str2 = 'Java'</br>
+str3 = 'JavaScript'</br>
+str4 = 'SQL'</br>
+str5 = 'Visual Basic'</br>
+
+請寫出以下功能(檔案皆存在drive中)</br>
+分五行輸出，存入output1.txt</br>
+同一行輸出，中間不空格，存入output2.txt</br>
+同一行輸出，中間空2格，存入output3.txt</br>
+
+Python
+
+## 作業
+Python 之禪 https://iter01.com/96810.html
+請輸入import this
+並寫一支程式計算is單字出現多少次。
+
+
